--- a/2_state_of_the_art/0_index.tex
+++ b/2_state_of_the_art/0_index.tex
@@ -268,7 +268,7 @@ Aunque hace años desde que las tecnologías entraron a formar parte de la vida 
 
 \begin{figure}
   \begin{center}
-    \includegraphics[scale=0.6]{PublicacionesAnuales.png}
+    \includegraphics[scale=0.5]{PublicacionesAnuales.png}
   \end{center}
   \caption{Distribución de las publicaciones por años}
   \label{fig:PublicacionesAnuales}
@@ -325,7 +325,7 @@ El tipo de contribución está más distribuído. Las contribuciones del tipo pr
 
 \subsection{Esquema de clasificación}
 
-bla bla bla
+En los apartados siguientes, se presentan los resultados del estudio para cada área de investigación. El listado de trabajos se muestra en la tabla~\ref{tab:ListadoTrabajos}.
 
 \subsubsection{Evaluación entre iguales y autoevaluación (peer and self-assessment)}
 
@@ -345,7 +345,7 @@ En \cite{ruizacarate2013soft} los estudiantes responden a un cuestionario llamad
 
 Para la evaluación de la competencia de la capacidad \emph{autocrítica} se realizó una experiencia en \cite{pinto2011assessment}, dónde un conjunto de profesores de diferentes titulaciones establecieron actividades para los estudiantes. Estos estudiantes evaluaron su propio trabajo. Para medir el grado de competencia de los estudiantes se utilizó la diferencia de la nota entre la que recibieron los estudiantes por parte del profesor y la que ellos mismos se pusieron. En \cite{sin2007evaluating} también se realizó una experiencia donde tanto los propios estudiantes como los profesores evaluaban el desempeño de las competencias de la comunicación en contabilidad, tanto las \emph{habilidades para expresarse de manera escrita} como del \emph{pensamiento analítico}.
 
-Para conocer el nivel de adquisición de competencias genéricas que poseen los estudiantes que acceden a la universidad y enfocándose en las diferencias entre los estudiantes de ciencias y los que no son de ciencias, se propone en \cite{so2011mapping} un cuestionario de autoevaluación. Aunque la autoevaluación y evaluación entre iguales son enfoques que quitan trabajo al docente, no todos son ventajas. Como se ha visto en algunos trabajos anteriores, este enfoque a menudo sólo se utiliza de manera complementaria a algún otro tipo de evaluación. Además, se puede dar el caso que la autoevaluación no se ajuste del todo a la realidad del desempeño del estudiante. Por ejemplo, en \cite{carreras2013promotion} hay notables diferencias entre las calificaciones que se auto-asignan los estudiantes en algunas competencias y las calificaciones que le asignaron los profesores en esas mismas competencias. En ese trabajo se promovió la adquisición de competencias genéricas desde un punto de vista interdisciplinar y se diseñaron herramientas especifícas para evaluar dichas habilidades. A la hora de evaluar, se realizaron tanto autoevaluaciones como evaluaciones del profesor. En esta experiencia se evaluaron cuatro competencias genéricas: \emph{capacidad de análisis},  \emph{habilidades de escritura}, \emph{responsabilidad} y \emph{capacidad de trabajo en equipo}. Cabe destacar discrepancias entre las calificaciones que se auto-asignan los estudiantes en las dos primeras competencias. En la \emph{capacidad de análisis} la discrepancia es de un 55,65\%, mientras que en las \emph{habilidades de escritura} de un 13,75\%.
+Para conocer el nivel de adquisición de competencias genéricas que poseen los estudiantes que acceden a la universidad y enfocándose en las diferencias entre los estudiantes de ciencias y los que no son de ciencias, se propone en \cite{so2011mapping} un cuestionario de autoevaluación. Aunque la autoevaluación y evaluación entre iguales son enfoques que quitan trabajo al docente, no todos son ventajas. Como se ha visto en algunos trabajos anteriores, este enfoque a menudo sólo se utiliza de manera complementaria a algún otro tipo de evaluación. Además, se puede dar el caso que la autoevaluación no se ajuste del todo a la realidad del desempeño del estudiante. Por ejemplo, en~\cite{carreras2013promotion} hay notables diferencias entre las calificaciones que se auto-asignan los estudiantes en algunas competencias y las calificaciones que le asignaron los profesores en esas mismas competencias. En ese trabajo se promovió la adquisición de competencias genéricas desde un punto de vista interdisciplinar y se diseñaron herramientas especifícas para evaluar dichas habilidades. A la hora de evaluar, se realizaron tanto autoevaluaciones como evaluaciones del profesor. En esta experiencia se evaluaron cuatro competencias genéricas: \emph{capacidad de análisis},  \emph{habilidades de escritura}, \emph{responsabilidad} y \emph{capacidad de trabajo en equipo}. Cabe destacar discrepancias entre las calificaciones que se auto-asignan los estudiantes en las dos primeras competencias. En la \emph{capacidad de análisis} la discrepancia es de un 55,65\%, mientras que en las \emph{habilidades de escritura} de un 13,75\%.
 
 
 
@@ -367,7 +367,7 @@ Las habilidades que hacen al individuo apto para el trabajo en equipo también s
 
 En \cite{badcock2010developing} se evaluan cuatro competencias genéricas: \emph{pensamiento crítico}, \emph{habilidades interpersonales}, \emph{solución de problemas} y \emph{comunicación escrita}. Para ello se utiliza el test GSA (Graduate Skills Assessment). El GSA fue desarrollado por el ACER (Australian Council for Educational Research)~\footnote{http://www.acer.edu.au/gsa}  bajo su Programa de Innovación para la Educación Superior. El objetivo con el que se diseñó es el de evaluar estas competencias genéricas cuando los estudiantes acceden a la universidad. Esto ayuda al profesorado a tener una medida objetiva para dichas competencias. Otro trabajo se muestra en~\cite{fernandez2011experience}, dónde se realiza un experimento en el que se presenta un test para evaluar la competencia de \emph{comunicación en un segundo idioma}, en este caso en inglés. En \cite{aziz2007appraisal,rashid2008engineering,a2007outcome} se utilizan modelos matemáticos (\emph{Rasch model} y \emph{ESPEGS model}) para la evaluación de los objetivos de aprendizaje del curso y de competencias genéricas. La entrada de estos modelos matemáticos son la evaluación de los estudiantes realizadas por los docentes para cada actividad. 
 
-Los cuestionarios pueden constar de preguntas abiertas o cerradas. Las preguntas abiertas obligan al evaluado a formular la respuesta a la pregunta y al evaluador a leerla para corregirla, lo que conlleva una mayor carga de trabajo. En \cite{albergaria2011critical} se presenta un cuestionario para evaluar el \emph{pensamiento crítico}, la \emph{curiosidad} y la\emph{creatividad}. El cuestionario consta sobre todo de preguntas abiertas, lo que implica tener que dedicar más tiempo y recursos para realizar las evaluaciones. En \cite{vizcarro2013assessment}, profesores de los grados de Computación y Matemáticas y de Ingeniería Informática elaboraron una prueba escrita para la evaluación de la competencia genérica de \emph{resolución de problemas}. Este constaba de preguntas abiertas y cerradas, siendo minuciosamente por el profesorado que formaba parte en la experiencia, así como las respuestas que se esperarían de los estudiantes. El proyecto fue muy satisfactorio, aunque en las conclusiones vemos que los autores indican que encontrar un equilibrio entre el esfuerzo necesario para desarrollar este tipo de dispositivos de evaluación y la posibilidad de no hacerlo, o hacerlo pero no tan exhaustivamente, es algo que la comunidad académica debe abordar seriamente.
+Los cuestionarios pueden constar de preguntas abiertas o cerradas. Las preguntas abiertas obligan al evaluado a formular la respuesta a la pregunta y al evaluador a leerla para corregirla, lo que conlleva una mayor carga de trabajo. En \cite{albergaria2011critical} se presenta un cuestionario para evaluar el \emph{pensamiento crítico}, la \emph{curiosidad} y la\emph{creatividad}. El cuestionario consta sobre todo de preguntas abiertas, lo que implica tener que dedicar más tiempo y recursos para realizar las evaluaciones. En~\cite{vizcarro2013assessment}, profesores de los grados de Computación y Matemáticas y de Ingeniería Informática elaboraron una prueba escrita para la evaluación de la competencia genérica de \emph{resolución de problemas}. Este constaba de preguntas abiertas y cerradas, siendo minuciosamente por el profesorado que formaba parte en la experiencia, así como las respuestas que se esperarían de los estudiantes. El proyecto fue muy satisfactorio, aunque en las conclusiones vemos que los autores indican que encontrar un equilibrio entre el esfuerzo necesario para desarrollar este tipo de dispositivos de evaluación y la posibilidad de no hacerlo, o hacerlo pero no tan exhaustivamente, es algo que la comunidad académica debe abordar seriamente.
 
 
 
@@ -381,28 +381,7 @@ El término \emph{Learning Analytics}, traducido al español como análisis del 
 
 En \cite{fidalgo:2015} también abordan el asunto de la evaluación de la competencia de \emph{trabajo en equipo}. Pero en este caso se hace desde un enfoque completamente diferente. En este trabajo se propone utilizar indicadores basados en la interacción entre los agentes que intervienen en el proceso de aprendizaje: Mediante los mensajes escritos en el foro se mide la interacción estudiante-estudiante activo, mientras que mediante las lecturas en el foro se mide las interacciones estudiante-estudiante pasivo. En este trabajo los autores demuestran como estos indicadores estan relacionados con el rendimiento trabajando en equipo de los estudiante. Además, cómo la obtención de estos indicadores mediante los mecanismos de un entorno virtual es un trabajo tedioso y lento, se desarrolló en este mismo trabajo el software \emph{LA system (Learning Analytics system)}.
 
-En \cite{rayon2014web} se propone la evaluación de varias competencias genéricas mediante indicadores obtenidos del análisis del proceso de aprendizaje (learning analytics). Para ello se crea una plataforma web llamada LACAMOLC (\emph{Learning Analytics for Competence Assessment of MObile Learning Contexts}) que proporciona a profesores y estudiantes un panel donde gestionar las actividades. Mediante LACAMOLC el profesor centraliza todos los indicadores para la evaluación de competencias obteniendo una información cuantitativa y visual. Meidante el número de accesos al foro de Moodle o mediante el número de contribuciones en el foro, se evaluan competencias como la \emph{comunicación interpersonal} o las \emph{habilidades de escritura}. También se utilizan indicadores obtenidos de documentos Google (\emph{Google Docs}).
-
-\section{Respuestas}
-
-En base al estudio mostrado las respuestas a las preguntas de investigación son las siguientes:
-
-\bigskip
-\textbf{Q1. ¿Qué competencias se han evaluado de forma automática o asistida por ordenador a partir de la actividad de los estudiantes en los entornos virtuales?}
-
-Las competencias que se han evaluado han sido prácticamente todas. Aunque las que más se han evaluado son xxx, yyy y zzz ...
-
-\bigskip
-\textbf{Q2. ¿Qué métodos se utilizan para evaluar competencias genéricas mediante el uso de entornos virtuales?}
-
-Los métodos que más se utilizan son las rubricas electrónicas, utilizadas tanto por el profesor como por el estudiante. Si el profesor se encarga de la rúbrica la carga de trabajo aumenta. Sin embargo, si se delega en la autoevaluación o evaluación entre iguales se pierde objetividad. Además, algunas competencias son difícilmente evaluables por este método. También se encuentra test psicológicos para la evaluación de algunos alumnos, asi como algunos juegos serios.
-
-\bigskip
-\textbf{Q3. ¿Qué técnicas se utilizan para evaluar competencias genéricas a partir de los registros de actividad de un entorno virtual?}
-
-Obtención de indicadores de los procesos de aprendizaje y el uso de estos indicadores para evaluar competencias genéricas.
-
-\section{Conclusiones}
+En~\cite{rayon2014web} se propone la evaluación de varias competencias genéricas mediante indicadores obtenidos del análisis del proceso de aprendizaje (learning analytics). Para ello se crea una plataforma web llamada LACAMOLC (\emph{Learning Analytics for Competence Assessment of MObile Learning Contexts}) que proporciona a profesores y estudiantes un panel donde gestionar las actividades. Mediante LACAMOLC el profesor centraliza todos los indicadores para la evaluación de competencias obteniendo una información cuantitativa y visual. Meidante el número de accesos al foro de Moodle o mediante el número de contribuciones en el foro, se evaluan competencias como la \emph{comunicación interpersonal} o las \emph{habilidades de escritura}. También se utilizan indicadores obtenidos de documentos Google (\emph{Google Docs}).
 
 \pagestyle{empty}
 \begin{landscape}
@@ -515,6 +494,85 @@ Obtención de indicadores de los procesos de aprendizaje y el uso de estos indic
 \end{longtable}
 \end{center}
 \end{landscape}
+
+\pagestyle{fancy}
+\section{Respuestas}
+
+En base al estudio mostrado las respuestas a las preguntas de investigación son las siguientes:
+
+\bigskip
+\textbf{Q1. ¿Qué competencias se han evaluado de forma automática o asistida por ordenador a partir de la actividad de los estudiantes en los entornos virtuales?}
+
+Las competencias que se han evaluado han sido prácticamente todas. Aunque las que más se han evaluado son la \emph{comunicación} (21 trabajos), \emph{trabajo en equipo} (19 trabajos) y emph{habilidades de pensamiento} (12 trabajos). Puede ver el resumen completo de número de trabajos por competencia en el cuadro~\ref{tab:TrabajosCompetencia}.
+
+\begin{table}
+  \begin{center}
+  \begin{tabular}{| m{10cm} | c |}
+    \hline
+    COMPETENCIA & TRABAJOS\\
+    \hline
+    \hline 
+    Habilidades para la comunicación en un segundo idioma & 3\\
+    \hline
+    Aprendizaje permanente & 2\\
+    \hline
+    Habilildades para la comunicación & 21\\
+    \hline
+    Capacidad crítica & 2\\
+    \hline
+    Planificación y gestión del timpo & 3\\
+    \hline
+    Creatividad & 5\\
+    \hline
+    Resolución de problemas & 10\\
+    \hline
+    Toma de decisiones & 1\\
+    \hline
+    Investigación & 3\\
+    \hline
+    Trabajo en equipo & 19\\
+    \hline
+    Habilidades de pensamiento & 12\\
+    \hline
+    Emprendimiento & 6\\
+    \hline
+    Habilidades interpersonales & 5\\
+    \hline
+    Gestión de proyectos & 2\\
+    \hline
+    Responsabilidad & 8\\
+    \hline
+    Cultural & 1\\
+    \hline
+    Trabajo autónomo & 2\\
+    \hline
+    TIC & 3\\
+    \hline
+    Liderazgo & 5\\
+    \hline
+  \end{tabular}
+\end{center}
+\caption{Número de trabajos que evalúan cada competencia genérica}
+\label{tab:TrabajosCompetencia}
+\end{table} 
+
+\bigskip
+\textbf{Q2. ¿Qué métodos se utilizan para evaluar competencias genéricas mediante el uso de entornos virtuales?}
+
+Los métodos que más se utilizan son las rubricas electrónicas, utilizadas tanto por el profesor como por el estudiante. El problema que encontramos con estos métodos es que si el profesor se encarga de la evaluación, la carga de trabajo de éste aumenta~\cite{lacuesta2009active,barbera2011design}. Sin embargo, si se delega en la autoevaluación o evaluación entre iguales pueden aparecer discrepancias entre las calificaciones que se auto-asignan los estudiantes y las que realmente merecen~\cite{carreras2013promotion}. 
+
+También se encuentra tests de personalidad para la evaluación de algunos alumnos. Estos tests están diseñado para revelar aspectos del carácter o mecanismos psicológicos de un individuo. Cuando estos tests cuentan con preguntas abiertas y cerradas, los autores indican que es necesario encontrar un equilibrio entre el esfuerzo necesario para desarrollar estas evaluaciones en grupos de muchos estudiantes y la posibilidad de no hacerlo, o hacerlo pero no tan exhaustivamente~\cite{vizcarro2013assessment}.
+
+Por último nos encontramos con experiencias que utilizan indicadores a partir de los objetivos alcanzados por los estudiantes en juegos serios~\cite{djaouti2011classifying,bedek2011behavioral} y trabajos que se basan en el análisis de los procesos de aprendizaje para la evaluación de los estudiantes~\cite{rayon2014web,fidalgo:2015}.
+
+\bigskip
+\textbf{Q3. ¿Qué técnicas se utilizan para evaluar competencias genéricas a partir de los registros de actividad de un entorno virtual?}
+
+Obtención de indicadores de los procesos de aprendizaje y el uso de estos indicadores para evaluar competencias genéricas.
+
+\section{Conclusiones}
+
+
 
 \pagestyle{fancy}
 
