--- a/2_state_of_the_art/0_index.tex
+++ b/2_state_of_the_art/0_index.tex
@@ -29,7 +29,7 @@ Los VLEs almacenan información de estudiantes, profesores, cursos, tareas, trab
 
 % VENTAJAS: http://oedb.org/ilibrarian/10-advantages-to-taking-online-classes/
 
-Pero además de todo lo anterior, un VLE almacena una gran cantidad de información que adecuadamente analizada y presentada podria ser de gran utilidad para los profesores para monitorizar el trabajo de sus estudiantes~\cite{podgorelec:2011}. Cada archivo, cada acceso o cada tarea realizada por cada estudiante queda registrada en el sistema. Por desgracia, esta información no esta siempre a disposición del profesor, y si lo está, require un filtrado para poder ser utilizada~\cite{Chebil:2012}. En \cite{fidalgo:2015}, se definen algunos indicadores para evaluar el desempeño de los estudiantes en la competencia del trabajo en equipo. Estos indicadores reflejan las interacciones de los estudiantes en el foro del VLE.
+Pero además de todo lo anterior, un VLE almacena una gran cantidad de información que adecuadamente analizada y presentada podria ser de gran utilidad para los profesores para monitorizar el trabajo de sus estudiantes~\cite{podgorelec:2011}. Cada archivo, cada acceso o cada tarea realizada por cada estudiante queda registrada en el sistema. Por desgracia, esta información no esta siempre a disposición del profesor, y si lo está, require un filtrado para poder ser utilizada~\cite{Chebil:2012}. En~\cite{fidalgo:2015}, se definen algunos indicadores para evaluar el desempeño de los estudiantes en la competencia del trabajo en equipo. Estos indicadores reflejan las interacciones de los estudiantes en el foro del VLE.
 
 El objetivo de este capítulo es establecer la base teórica sobre la que se sustenta esta tesis doctoral. Se comenzará definiendo las preguntas de investigación, a las que se dará respuesta mediante un \emph{Estudio Sistemático de Mapeo} (\emph{SMS: Systematic Mapping Study}) aplicado a la ingenieria del software siguiendo las directrices descritas por Petersen~\cite{Petersen:2008}.
 
@@ -381,7 +381,7 @@ El término \emph{Learning Analytics}, traducido al español como análisis del 
 
 En \cite{fidalgo:2015} también abordan el asunto de la evaluación de la competencia de \emph{trabajo en equipo}. Pero en este caso se hace desde un enfoque completamente diferente. En este trabajo se propone utilizar indicadores basados en la interacción entre los agentes que intervienen en el proceso de aprendizaje: Mediante los mensajes escritos en el foro se mide la interacción estudiante-estudiante activo, mientras que mediante las lecturas en el foro se mide las interacciones estudiante-estudiante pasivo. En este trabajo los autores demuestran como estos indicadores estan relacionados con el rendimiento trabajando en equipo de los estudiante. Además, cómo la obtención de estos indicadores mediante los mecanismos de un entorno virtual es un trabajo tedioso y lento, se desarrolló en este mismo trabajo el software \emph{LA system (Learning Analytics system)}.
 
-En~\cite{rayon2014web} se propone la evaluación de varias competencias genéricas mediante indicadores obtenidos del análisis del proceso de aprendizaje (learning analytics). Para ello se crea una plataforma web llamada LACAMOLC (\emph{Learning Analytics for Competence Assessment of MObile Learning Contexts}) que proporciona a profesores y estudiantes un panel donde gestionar las actividades. Mediante LACAMOLC el profesor centraliza todos los indicadores para la evaluación de competencias obteniendo una información cuantitativa y visual. Meidante el número de accesos al foro de Moodle o mediante el número de contribuciones en el foro, se evaluan competencias como la \emph{comunicación interpersonal} o las \emph{habilidades de escritura}. También se utilizan indicadores obtenidos de documentos Google (\emph{Google Docs}).
+En~\cite{rayon2014web} se propone la evaluación de varias competencias genéricas mediante indicadores obtenidos del análisis del proceso de aprendizaje (learning analytics). Para ello se crea una plataforma web llamada LACAMOLC (\emph{Learning Analytics for Competence Assessment of MObile Learning Contexts}), un panel que da soporte a los procesos de aprendizaje y evaluación proporcionando una perspectiva visual del análisis del aprendizaje mediante la recolección de datos sociales y de uso desde diferentes entornos de aprendizaje como Moodle, Google Apps para la educación y MediaWiki. Mediante LACAMOLC el profesor centraliza todos los indicadores para la evaluación de competencias obteniendo una información cuantitativa y visual. Meidante el número de accesos al foro de Moodle o mediante el número de contribuciones en el foro, se evaluan competencias como la \emph{comunicación interpersonal} o las \emph{habilidades de escritura}. También se utilizan indicadores obtenidos de documentos Google (\emph{Google Docs}).
 
 \pagestyle{empty}
 \begin{landscape}
@@ -559,6 +559,13 @@ Las competencias que se han evaluado han sido prácticamente todas. Aunque las q
 \bigskip
 \textbf{Q2. ¿Qué métodos se utilizan para evaluar competencias genéricas mediante el uso de entornos virtuales?}
 
+\begin{itemize}
+\item Evaluación entre iguales y autoevaluación: mediante rubricas o instrucciones del profesor son los propios estudiantes los que evalúan a sus compañeros.
+\item Evaluación del profesor: mediante rubricas, exámenes, pruebas orales o a su propio criterio es el profesor el que evalúa las competencias de los estudiantes.
+\item Cuestionarios: mediante el uso de tests de personalidad compuestos de preguntas abiertas y cerradas se evalúan algunas competencias genéricas.
+\item Evaluación asistida por ordenador: mediante el uso de juegos serios o el análisis de la interacción de los estudiantes con los entornos de aprendizaje se evalúan las competenias genéricas de los estudiantes.
+\end{itemize}
+
 Los métodos que más se utilizan son las rubricas electrónicas, utilizadas tanto por el profesor como por el estudiante. El problema que encontramos con estos métodos es que si el profesor se encarga de la evaluación, la carga de trabajo de éste aumenta~\cite{lacuesta2009active,barbera2011design}. Sin embargo, si se delega en la autoevaluación o evaluación entre iguales pueden aparecer discrepancias entre las calificaciones que se auto-asignan los estudiantes y las que realmente merecen~\cite{carreras2013promotion}. 
 
 También se encuentra tests de personalidad para la evaluación de algunos alumnos. Estos tests están diseñado para revelar aspectos del carácter o mecanismos psicológicos de un individuo. Cuando estos tests cuentan con preguntas abiertas y cerradas, los autores indican que es necesario encontrar un equilibrio entre el esfuerzo necesario para desarrollar estas evaluaciones en grupos de muchos estudiantes y la posibilidad de no hacerlo, o hacerlo pero no tan exhaustivamente~\cite{vizcarro2013assessment}.
@@ -568,11 +575,43 @@ Por último nos encontramos con experiencias que utilizan indicadores a partir d
 \bigskip
 \textbf{Q3. ¿Qué técnicas se utilizan para evaluar competencias genéricas a partir de los registros de actividad de un entorno virtual?}
 
-Obtención de indicadores de los procesos de aprendizaje y el uso de estos indicadores para evaluar competencias genéricas.
+Se han encontrado dos trabajos que se basan en este enfoque:
+
+\bigskip
+El primer trabajo que encontramos en esta parcela es “A web platform for the assessment of competencs in Mobile Learning Contexts” ~\cite{rayon2014web}. En él se implementa LACAMOLC, una plataforma web que aporta información visual e informes con indicadores de competencias genéricas de los estudiantes a partir de los registros de actividad. LACAMOLC está implementado sobre Pentaho. Pentaho es una herramienta de análisis de negocio que recoge datos de las bases de datos de los diferentes orígenes, y que mapeará estos datos con los indicadores de las competencias genéricas. Las competencias que se evaluan y los indicadores que se utilizan son:
+
+\begin{itemize}
+\item \emph{Gestión del tiempo}. Indicador: Cumplimiento de la planificación, es decir, número de acciones que se han hecho a tiempo con respecto a la planificación fijada en una hoja de cálculo de Google.
+\item \emph{Comunicación interpersonal}. Indicador: Escuchar a los demás, es decir, número de veces que los estudiantes accedieron a las discusiones del foro de Moodle.
+\item \emph{Comunicación interpersonal}. Indicador: Expresar sus ideas, es decir, intervenciones en el foro de Moodle y comentarios en el documento Google.
+\item \emph{Habilidades de escritura}. Indicador: Expresar sus ideas, es decir, número de veces que el cada estudiante intervino en los foros de Moodle dividido por el número de veces que accedió.
+\item \emph{Habilidades de escritura}. Indicador: Expresar sus ideas con claridad y precisión, es decir, número de total de palabras que cada estudiante escribió dividido por el número de veces que intervino.
+\item \emph{Trabajo en equipo}. Indicador: Participación activa, es decir, tiempo total que duran las discusiones dividos por el número de sesiones.
+\item \emph{Pensamiento analítico}. Indicador: Respaldo de ideas de otros, es decir, número total de post que un estudiante ha leído dividido entre el número de veces que intervino.
+\item \emph{Pensamiento analítico}. Indicador: indentificación de errores o falta de coherencia en sus propias ideas, es decir, número de veces que un estudiante releyó sus comentarios.
+\end{itemize}
+
+\bigskip
+El segundo trabajo que tenemos es “Using Learning Analytics to improve teamwork assessment”~\cite{fidalgo:2015}. En este trabajo se utiliza el método CTMTC (\emph{Comprehensive Training Model of the Teamwork Competence}), un método que integra herramientas que estan presentes en diferentes entornos de aprendizaje virtual y que facilita el registro de la interacción de los estudiantes y por tanto un acceso más sencillo a las evidencias del trabajo en equipo. El registro de esta interacción en el foro era una tarea tediosa para ser realizada a mano, por lo que implementaron el \emph{LA system}. \emph{LA system} se implementa como un servicio web en Moodle, de forma que la información sea accesible a través de internet con mensajes basados en XML. Esta información después es consumida por un cliente que proporciona una visión apropiada de los datos. Los indicadores utilizados son:
+
+\begin{itemize}
+\item Mensajes escritos en foro: interacción estudiante-estudiante activo.
+\item Mensajes leídos en el foro:  interacciones estudiante-estudiante pasivo.
+\end{itemize}
 
 \section{Conclusiones}
 
+Las competencias genéricas son hoy en día una pieza fundamental en las planificaciones de las asignaturas de las todas las titulaciones universitarias. Como consecuencia de ésto, son numerosas los trabajos y los proyectos que se han puesto en marcha en los últimos años para fomentar el desarrollo de las mismas en los estudiantes. Una vez trabajadas estas competencias y finalizados estos proyecto, es necesario una evaluación del nivel de adquisición de estas competencias en los estudiantes.
 
+En la literatura hemos encontrado diferentes problemas a la hora de afrontar esta evaluación. Por un lado problemas de objetividad, ya que los criterios que para un docente son válidos para le avluación de una competencia genéricas puede no ser válido para otro. Y por una lado problemas de escalabilidad. Si ya en muchos casos la carga de trabajo del profesorado para poder alcanzar los objetivos del curso es elevada, aún más lo sera si éstos tiene que generar y evaluar nuevas actividades para evaluar las competencias genéricas. Además, este problema de escalabilidad se acrecenta aún más el el contexto de los entornos de aprendizaje virtuales, donde los cursos en ocasiones contienen un número muy elevado de estudiantes (por ejemplo los cursos de tipo MOOC (\emph{Massive Online Open Courses}).
+
+Apoyándose en las tecnologías de la información se han encontrado 49 trabajos que evalúen las competencias genéricas. En muchos trabajos es el profesor el que evalúa a sus estudiantes en el desempeño de las competencias genéricas. Ya sea mediante rubricas electronicas o mediante el análisis del trabajo de los estudiantes utilizando diferentes herramientas. Trabajos que se presentan con mayor o menor éxito, pero que tiene en común un problema de carga de trabajo para el profesorado.
+
+En otros trabajos, se trata de minimizar esta carga del trabajo combinando en unos casos y sustituyendo la evaluación del profesor con evaluaciones entre iguales o autoevaluaciones de competencias genéricas. Esto en parte esquiva el problema de la carga de trabajo, pero no encontramos con problemas de objetividad en algunas evaluaciones de los estudiantes. Como consecuencia, el profesorado tiene que revisar las evaluaciones de sus estudiantes, por lo que volvemos a encontrarnos con problemas de escalabilidad.
+
+Cuestionarios ...
+
+Herramientas y learning analytics ...
 
 \pagestyle{fancy}
 
