conclusiones listas, falta repaso final

--- a/2_state_of_the_art/0_index.tex
+++ b/2_state_of_the_art/0_index.tex
@@ -607,11 +607,13 @@ En la literatura hemos encontrado diferentes problemas a la hora de afrontar est
 
 Apoyándose en las tecnologías de la información se han encontrado 49 trabajos que evalúen las competencias genéricas. En muchos trabajos es el profesor el que evalúa a sus estudiantes en el desempeño de las competencias genéricas. Ya sea mediante rubricas electronicas o mediante el análisis del trabajo de los estudiantes utilizando diferentes herramientas. Trabajos que se presentan con mayor o menor éxito, pero que tiene en común un problema de carga de trabajo para el profesorado.
 
-En otros trabajos, se trata de minimizar esta carga del trabajo combinando en unos casos y sustituyendo la evaluación del profesor con evaluaciones entre iguales o autoevaluaciones de competencias genéricas. Esto en parte esquiva el problema de la carga de trabajo, pero no encontramos con problemas de objetividad en algunas evaluaciones de los estudiantes. Como consecuencia, el profesorado tiene que revisar las evaluaciones de sus estudiantes, por lo que volvemos a encontrarnos con problemas de escalabilidad.
+En otros trabajos, se trata de minimizar esta carga del trabajo combinando en unos casos la evaluación del profesor y sustituyendo en otros casos, con evaluaciones entre iguales o autoevaluaciones de competencias genéricas realizadas por los estudiantes. Esto en parte esquiva el problema de la carga de trabajo, pero no encontramos con problemas de objetividad en algunas evaluaciones de los estudiantes. Como consecuencia, el profesorado tiene que revisar las evaluaciones de sus estudiantes, por lo que volvemos a encontrarnos con problemas de escalabilidad.
 
-Cuestionarios ...
+Otros trabajos consisten la implementación en alguna herramienta online de cuestionarios de personalidad, normalmente diseñados para revelar aspectos del carácter o mecanismos psicológicos de un individuo. El inconveniente es que realizar un cuestionario de este tipo no está al alcance de cualquiera, sino que debe ser realizado por psicólogos. Además, son éstos los que deben diagnosticar o valorar los resultados. Y aunque se trate de automatizar, en ocasiones estos tests suelen contar con preguntas cerradas y abiertas, y en el caso de esta última, volvemos a encontrarnos con problemas de escalabilidad.
 
-Herramientas y learning analytics ...
+Por último nos hemos encontrado con el tipo de trabajo que más se asemeja a nuestra propuesta. Herramientas que automaticen la evaluación de competencias genéricas. Por un lado nos hemos encontrados con juegos serios. Estos juegos emulan un caso real profesional y en base al modo de actuar del estudiante obtendran una puntuación que servirá como medida del desempeño en ciertas competencias genéricas. Estos juegos suelen estar muy enfocados a ciertas competencias y su implementación es costosa. Además, el proceso de extracción de calificaciones no está automatizado ni integrado con las herramientas de evaluación del profesor, por lo que es necesario un procedimiento manual para capturarlas.
+
+Por otro lado, nos hemos encontrado dos trabajos que evalúan competencias genéricas a partir de indicadores obtenidos de los registros de aprendizaje. En estos trabajos las herramientas proporcionan unos indicadores fijos, no dan al docente la opción de decidir fórmulas ni crear sus propias evaluaciones. Lo que es válido para un profesor puede no serlo para otro. Si tuviéramos un DSL que me permitiera diseñar evaluaciones podíamos tomar los indicadores que nos vinieran bien de las actividades que realmente nos interesan.
 
 \pagestyle{fancy}
 
