--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -789,6 +789,19 @@ author = "Leslie Borjas De Xena"
   publisher={IGI Global Hershey, PA}
 }
 
+@article{Kitchenham:2010,
+ author = {Kitchenham, Barbara and Pretorius, Rialette and Budgen, David and Pearl Brereton, O. and Turner, Mark and Niazi, Mahmood and Linkman, Stephen},
+ title = {Systematic Literature Reviews in Software Engineering - A Tertiary Study},
+ journal = {Information and Software Technology},
+ issue_date = {August, 2010},
+ volume = {52},
+ number = {8},
+ month = aug,
+ year = {2010},
+ issn = {0950-5849},
+ pages = {792--805}
+} 
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
