--- a/2_state_of_the_art/0_index.tex
+++ b/2_state_of_the_art/0_index.tex
@@ -32,7 +32,7 @@ Los \emph{entornos virtuales de aprendizaje} (EVA o, del inglés, VLE, virtual l
 % VENTAJAS: http://oedb.org/ilibrarian/10-advantages-to-taking-online-classes/
 Pero además de todo lo anterior, un EVA almacena una gran cantidad de información que adecuadamente analizada y presentada podria ser de gran utilidad para los profesores para monitorizar el trabajo de sus estudiantes~\cite{podgorelec:2011}. Cada archivo, cada acceso o cada tarea realizada por cada estudiante queda registrada en el sistema. Por desgracia, esta información no esta siempre a disposición del profesor, y si lo está, require un filtrado para poder ser utilizada~\cite{Chebil:2012}. 
 
-En este capítulo se va a establecer la base teórica sobre la que se sustenta esta tesis doctoral. Se comenzará definiendo las preguntas de investigación, a las que se tratará de dar respuesta mediante un \emph{Estudio Sistemático de Mapeo} (SMS, del inglés, Systematic Mapping Study). Un SMS, es una amplia revisión de los estudios primarios en un área específica cuyo objetivo es identificar alguna evidencia sobre el tema. Este estudio se basa en las directrices publicadas en la metodología propuesta por Kitchenham \cite{Kitchenham:2010}. Esta metodología describe cómo se deben planificar, ejecutar y presentar los resultados de una revisión de la literatura en ingeniería del software. Para este trabajo se ha utilizado la propuesta de Petersen \cite{Petersen:2008}.
+En este capítulo se va a establecer la base teórica sobre la que se sustenta esta tesis doctoral. Se comenzará definiendo las preguntas de investigación, a las que se tratará de dar respuesta mediante un \emph{estudio de mapeo sistemático} (SMS, del inglés, Systematic Mapping Study). Un SMS, es una amplia revisión de los estudios primarios en un área específica cuyo objetivo es identificar alguna evidencia sobre el tema. Este estudio se basa en las directrices publicadas en la metodología propuesta por Kitchenham \cite{Kitchenham:2010}. Esta metodología describe cómo se deben planificar, ejecutar y presentar los resultados de una revisión de la literatura en ingeniería del software. Para este trabajo se ha utilizado la propuesta de Petersen \cite{Petersen:2008}.
 
 \section{Preguntas de investigación}
 
@@ -123,7 +123,7 @@ Nuestra búsqueda se centró en la localización de los trabajos que, habiendo s
 Para la extracción de la información se han dividido los trabajos de acuerdo a los siguientes tres aspectos: tipo de investigación, tipo de contribución y ámbito de aplicación de la investigación. A continuación se discute esta clasificación.
 
 \subsubsection{Tipo de investigación}
-Esta clasificación hace referencia al tipo de trabajo de investigación llevado a cabo por el/los investigador/es. Existen diferentes enfoques para la clasificación de los trabajos según el tipo investigación que desarrollan. Algunos de estos sistemas de clasificación son los propuestos por Wieringa \cite{Wieringa:2005} y Hevner \cite{Hevner:2004}. Usamos el primero, ya que es el recomendado en el estudio sistemático de mapeo descrito por Petersen \cite{Petersen:2008}.
+Esta clasificación hace referencia al tipo de trabajo de investigación llevado a cabo por el/los investigador/es. Existen diferentes enfoques para la clasificación de los trabajos según el tipo investigación que desarrollan. Algunos de estos sistemas de clasificación son los propuestos por Wieringa \cite{Wieringa:2005} y Hevner \cite{Hevner:2004}. Usamos el primero, ya que es el recomendado en el SMS descrito por Petersen \cite{Petersen:2008}.
 \begin{itemize}
 \item Solución propuesta (\emph{proposal of solution}): se propone una solución para un problema; la solución puede ser innovadora o una extensión significativa de una técnica existente. Los posibles beneficios y la aplicabilidad de la solución se demuestran por un pequeño ejemplo o una buena línea de argumentación.
 \item Validación de investigación (\emph{validation research}): las técnicas investigadas son nuevas y todavía no se han aplicado en la práctica. Estas técnicas podrían ser por ejemplo los experimentos, es decir, el trabajo realizado en un laboratorio.
